--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Set env
         id: vars
-        run: echo "RELEASE_VERSION=$(git describe --tags --always 2> /dev/null)" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=$(git describe --tags --always 2> /dev/null)" >> $GITHUB_OUTPUT
       - name: Build
         run: |
           x86_64-w64-mingw32-gcc kbbl.c -o kbbl.exe -s -mwindows -luuid -D_WIN32_WINNT=0x0600 -DWINVER=0x0600 -DWIN32_LEAN_AND_MEAN -D__USE_MINGW_ANSI_STDIO=0 -Wall -Wextra
